test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-running-as-nonRoot/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-running-as-non-root
spec:
  background: true
  validationFailureAction: Enforce
  rules:
  - name: test-exclusion-running-as-non-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: restricted
        version: latest
        exclude:
        - controlName: "Running as Non-root"
          restrictedField: "spec.securityContext.runAsNonRoot"
          values:
          - "false"
        - controlName: "Running as Non-root"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.runAsNonRoot"
          values:
          - "false"
